--- a/prop-solver/prop-solver.cabal
+++ b/prop-solver/prop-solver.cabal
@@ -39,6 +39,8 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , text
+    , websockets
   default-language: Haskell2010
 
 executable prop-solver-exe
@@ -53,6 +55,8 @@ executable prop-solver-exe
   build-depends:
       base >=4.7 && <5
     , prop-solver
+    , text
+    , websockets
   default-language: Haskell2010
 
 test-suite prop-solver-test
@@ -68,4 +72,6 @@ test-suite prop-solver-test
   build-depends:
       base >=4.7 && <5
     , prop-solver
+    , text
+    , websockets
   default-language: Haskell2010
