--- a/prop-solver/prop-solver.cabal
+++ b/prop-solver/prop-solver.cabal
@@ -9,9 +9,9 @@ version:        0.1.0.0
 description:    Please see the README on GitHub at <https://github.com/githubuser/prop-solver#readme>
 homepage:       https://github.com/githubuser/prop-solver#readme
 bug-reports:    https://github.com/githubuser/prop-solver/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2024 Author name here
+author:         Gabriel Hurst
+maintainer:     gabrielhurst11@gmail.com
+copyright:      2024 Gabriel Hurst
 license:        BSD-3-Clause
 license-file:   LICENSE
 build-type:     Simple
