--- a/prop-solver/package.yaml
+++ b/prop-solver/package.yaml
@@ -1,6 +1,6 @@
 name:                prop-solver
-version:             0.1.0.0
-github:              "githubuser/prop-solver"
+version:             0.1.0.1
+github:              "gabrielhurst11/diss"
 license:             BSD-3-Clause
 author:              "Gabriel Hurst"
 maintainer:          "gabrielhurst11@gmail.com"
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/prop-solver#readme>
+description:         Please see the README on GitHub at <https://github.com/gabrielhurst11/diss#readme>
 
 dependencies:
 - base >= 4.7 && < 5
