--- a/prop-solver/prop-solver.cabal
+++ b/prop-solver/prop-solver.cabal
@@ -5,10 +5,10 @@ cabal-version: 2.2
 -- see: https://github.com/sol/hpack
 
 name:           prop-solver
-version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/prop-solver#readme>
-homepage:       https://github.com/githubuser/prop-solver#readme
-bug-reports:    https://github.com/githubuser/prop-solver/issues
+version:        0.1.0.1
+description:    Please see the README on GitHub at <https://github.com/gabrielhurst11/diss#readme>
+homepage:       https://github.com/gabrielhurst11/diss#readme
+bug-reports:    https://github.com/gabrielhurst11/diss/issues
 author:         Gabriel Hurst
 maintainer:     gabrielhurst11@gmail.com
 copyright:      2024 Gabriel Hurst
@@ -21,7 +21,7 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/prop-solver
+  location: https://github.com/gabrielhurst11/diss
 
 library
   exposed-modules:
